--- a/css/app.scss
+++ b/css/app.scss
@@ -2619,6 +2619,7 @@ table.dataTable thead td {
       input[type='search']{
         width:160px;
       }
+      margin-top: -29px!important;
     }
   }
 }
