--- a/css/app.css
+++ b/css/app.css
@@ -2889,6 +2889,9 @@ table.dataTable thead td {
 }
 
 @media (max-width: 425px) {
+  .dataTables_wrapper .dataTables_filter {
+    margin-top: -29px !important;
+  }
   .dataTables_wrapper .dataTables_filter input[type='search'] {
     width: 160px;
   }
