--- a/css/app.css
+++ b/css/app.css
@@ -2916,4 +2916,38 @@ table.dataTable thead td {
       -ms-flex-pack: center;
           justify-content: center;
 }
+
+.checkmark {
+  color: #32C28C;
+}
+
+.check-box {
+  height: 15px;
+  width: 15px;
+  background-color: #8C97A1;
+  border-radius: 50%;
+  margin-right: 2px;
+  display: inline-block;
+  font-size: 11px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  color: #fff;
+}
+
+.dropdown-item.active,
+.dropdown-item:active {
+  color: #fff;
+  text-decoration: none;
+  background-color: #f0f2f4;
+}
+
+.form-control:focus {
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
 /*# sourceMappingURL=app.css.map */
