--- a/css/app.scss
+++ b/css/app.scss
@@ -2543,7 +2543,7 @@ table.dataTable thead td {
 
 
 #addTask {
-  background: #e5e5e5e6 !important;
+  // background: #e5e5e5e6 !important;
 
   ::placeholder {
     color: lightgrey;
